--- a/css/main.less
+++ b/css/main.less
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700); 
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700);
 @import 'bootstrap.less';
 @header-height : 30px;
 @padding-section : 40px;
@@ -7,12 +7,9 @@
 /*
 	HEADER
 */
-.header-wrapper{
-	background: @brand-primary;
-	border-top: @brand-success-contrast 5px solid;
-}
-  
-.header{	
+
+
+.header{
 	height: @header-height;
 }
 .navbar-brand{
@@ -24,52 +21,58 @@
 .parallax-section-head{
 	height: @parallax-header-height;
 	background: url('../img/bg.jpg') no-repeat scroll 0 0 transparent;
+	position: absolute;
+    z-index: -100;
+    left: 50%;
 }
+
 
 img {
   display: block;
   width: 100%;
-}
 
-.scene {
-  max-width: 500px;
-  height: 400px;
-  margin: 0 auto;
-  padding: 0;
-
-  img{
-  	width: 1920px;
-  	height: 400px;
-  	display:block;
+  &.bg {
+      min-height: 100%;
+      min-width: 1024px;
+      width: 100%;
+      height: auto;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -10;
   }
+
 }
 
-.layer:nth-child(1) {
-  opacity: 0.15;
-}
-.layer:nth-child(2) {
-  opacity: 0.30;
-}
-.layer:nth-child(3) {
-  opacity: 0.45;
-}
+
 
 /*
 	MAIN CONTAINA!!
 */
 .main-container{
+  z-index: 100;
+  color: #FFF;
+
 	padding-top: 30px;
 	.row{
 		padding-top: @padding-section;
-	}	
-} 
+	}
+}
 
 .about-wrapper{
-	background: @brand-primary;	
+	background: @brand-primary;
 	margin-top: @padding-section;
 }
 
 .about-container{
 	padding-top: @padding-section;
 
+}
+
+
+@media screen and (max-width: 1024px) { /* Specific to this particular image */
+  img.bg {
+    left: 50%;
+    margin-left: -512px;   /* 50% */
+  }
 }
