--- a/css/main.less
+++ b/css/main.less
@@ -1,19 +1,53 @@
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,900,700);
+@import url(http://fonts.googleapis.com/css?family=Advent+Pro);
 @import 'bootstrap.less';
 @header-height : 30px;
 @padding-section : 40px;
 @parallax-header-height : 200px;
+@clear-desaturated-blue : #919498;
 
 /*
 	HEADER
 */
+body{
+  font-family: "Roboto",helvetica,arial,"sans-serif";
+}
+h1{
+  font-family: "Roboto",helvetica,arial,"sans-serif";
+  font-weight: 900;
+  text-transform: uppercase;
+  display: block;
+  height: 130px;
+  margin: 0;
+  padding: 0;
 
+}
+.name-wrap{
+  display: block;
+  float: right;
+  font-size: 72px;
+}
+.lastname-wrap{
+  font-family: "Advent Pro",helvetica,arial,"sans-serif";
+  font-weight: 400;
+  display: block;
+  float: right;
+  clear: right;
+  font-size: 48px;
+
+}
+.tagline{
+  text-align: right;
+  color: @clear-desaturated-blue;
+}
 
 .header{
 	height: @header-height;
 }
 .navbar-brand{
 	span{
+    clear: both;
 		font-weight: bold;
 	}
 }
@@ -22,8 +56,8 @@
 	height: @parallax-header-height;
 	background: url('../img/bg.jpg') no-repeat scroll 0 0 transparent;
 	position: absolute;
-    z-index: -100;
-    left: 50%;
+  z-index: -100;
+  left: 50%;
 }
 
 
@@ -60,14 +94,65 @@ img {
 }
 
 .about-wrapper{
-	background: @brand-primary;
-	margin-top: @padding-section;
+
+  .alert{
+    border: none;
+    background-color:rgba(82,95,102,0.5);
+    min-height: 75px;
+    height: auto;
+    overflow: hidden;
+  }
+
+  a{
+    width: 48px;
+    height: 48px;
+    display: block;
+    text-indent: -5000px;
+    float: left;
+    margin-left: 6px;
+    margin-top: 6px;
+
+    &#github{
+      background: url('../img/social_sprite.png') no-repeat scroll 0 0 transparent;
+    }
+
+    &#behance{
+      background: url('../img/social_sprite.png') no-repeat scroll -60px 0 transparent;
+    }
+
+    &#flickr{
+      background: url('../img/social_sprite.png') no-repeat scroll -120px 0 transparent;
+    }
+
+    &#twitter{
+      background: url('../img/social_sprite.png') no-repeat scroll -180px 0 transparent;
+    }
+
+    &#facebook{
+      background: url('../img/social_sprite.png') no-repeat scroll -240px 0 transparent;
+    }
+    &#soundcloud{
+      background: url('../img/social_sprite.png') no-repeat scroll -300px 0 transparent;
+    }
+    &#deviantart{
+      background: url('../img/social_sprite.png') no-repeat scroll -360px 0 transparent;
+    }
+    &#blog{
+      text-indent: 0px;
+      height: 20px;
+      text-align: right;
+      color: @clear-desaturated-blue;
+    }
+    &#contact{
+      text-indent: 0px;
+      height: 20px;
+      text-align: right;
+      color: @clear-desaturated-blue;
+    }
+  }
+
 }
 
-.about-container{
-	padding-top: @padding-section;
-
-}
 
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
