three js is in da house

--- a/css/main.less
+++ b/css/main.less
@@ -153,6 +153,14 @@ img {
 
 }
 
+canvas {
+   position: fixed;
+   top: 0;
+   left: 0;
+   background-color: transparent;
+   z-index: -1;
+}
+
 
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
