--- a/components/bootstrap/less/variables.less
+++ b/components/bootstrap/less/variables.less
@@ -87,7 +87,7 @@
 @line-height-large:              1.33;
 @line-height-small:              1.5;
 
-@border-radius-base:             0px;
+@border-radius-base:             4px;
 @border-radius-large:            6px;
 @border-radius-small:            3px;
 
@@ -380,7 +380,7 @@
 @state-success-border:           darken(spin(@state-success-bg, -10), 5%);
 
 @state-info-text:                #3a87ad;
-@state-info-bg:                  #525f66;
+@state-info-bg:                  #d9edf7;
 @state-info-border:              darken(spin(@state-info-bg, -10), 7%);
 
 @state-warning-text:             #c09853;
