--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -5,7 +5,7 @@ body{
 }
 
 .card-header{
-	background-image: url(./assets/img/background.jpg);
+	background-image: url(/src/assets/img/background.jpg);
     height: 230px;
     display: block;
     background-position: 0px -700px;
